used potential errorMessage and place some todos to move toasts completely from repository to ui